--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -27,18 +27,25 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <h2>Correlations Discovered Between Health Care, Obesity, Age and Income</h2>
+          <p> The graph displays trends in 2014 amongst Health Care, Obesity, Age and Income gathered from the  U.S. Census Bureau and the Behavioral Risk Factor Surveillance System.
+          To visualize trends amongst the data please click on the labels displayed on the graph. 
+        For more detailed information about each state please click the circles on the graph with the abbreviated state names.</p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Though the data in the graph is older than 2014 it is important to analyze the trend, 
+            where poorer states like Texas and New Mexico lack healthcare, whereas richer states like Massachusets 
+            and Conneticut have much better health care. 
+            There is also a clear and a obvious trend in income and healthcare, where states with higher average income 
+            are covered better for health care as compared to the the states with lower average income. 
+            Interms of Age, people from the of 30 to 44 significantly lack healthcare all over US. Which is 
+            a bit of a  concern. 
+          </p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p> With Obesity, states with lower average income show higher obesity rates, such as 
+            Missisipi, West Virginia and Arkansas. This trend is inporpotion to the poverty scale as well, 
+            where richer states seem to habve lower obesity rates. This could be because the cost of weekly 
+            groceries is more expensive than the cost fast food. Hence, more people rely on it. 
+            </p>
         </div>
       </div>
     </div>
